--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#"
-          ><h5>Yuvraj Singh</h5></a>
+          ><h5>Kartik Awadh Yadav</h5></a>
         <button class="navbar-toggler" type="button">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -54,15 +54,15 @@
       <div class="container">
         <div class="infos">
           <h6 class="subtitle">hello,I'm</h6>
-          <h6 class="title">Yuvraj Singh</h6>
-          <p>Front-End Developer</p>
+          <h6 class="title">Kartik Awadh Yadav</h6>
+          <p>AI/ML enthusiast</p>
 
           <div class="buttons pt-3">
-            <a href="https://www.linkedin.com/in/yuvraj-singh-5707571b5/">
+            <a href="https://www.linkedin.com/in/kartik-awadh-yadav-941300222/">
               <button class="btn btn-primary rounded">HIRE ME</button>
             </a>
 
-            <a href="assets/resume.pdf">
+            <a href="Kartikgc9/website-repo/assets/Resumeoriginal.pdf">
               <button class="btn btn-dark rounded">DOWNLOAD CV</button>
             </a>
           </div>
@@ -70,18 +70,18 @@
           <div class="socials mt-4">
             <a
               class="social-item"
-              href="https://www.linkedin.com/in/yuvraj-singh-5707571b5/"
+              href="https://www.linkedin.com/in/kartik-awadh-yadav-941300222/"
               ><i class="ti-linkedin"></i
             ></a>
             <a
               class="social-item"
-              href="https://www.instagram.com/yuvraj_kharoud19/"
+              href="https://instagram.com/kartikkyadavvvv?igshid=ZDc4ODBmNjlmNQ=="
               ><i class="ti-instagram"></i
             ></a>
-            <a class="social-item" href="https://github.com/Yuvraj3905"
+            <a class="social-item" href="https://github.com/Kartikgc9"
               ><i class="ti-github"></i
             ></a>
-            <a class="social-item" href="https://twitter.com/yuvraj20S"
+            <a class="social-item" href="https://twitter.com/awadh_kartik"
               ><i class="ti-twitter"></i
             ></a>
           </div>
@@ -116,17 +116,17 @@
           <div class="col-md-3">
             <img
               style="width: 450px; height: 550px"
-              src="assets/imgs/pic.jpg"
+              src="Kartikgc9/website-repo/assets/imgs/mypioc.jpg"
               alt=""
               class="img-thumbnail"
             />
           </div>
           <div class="pl-md-4 col-md-9">
-            <h6 class="title">Yuvraj Singh</h6>
-            <p class="subtitle">Front-End Developer</p>
+            <h6 class="title">Kartik Awadh Yadav</h6>
+            <p class="subtitle">BUdding Data scientist</p>
             <p>
-              Motivated NCC Senior Under officer with a Bachelor of Engineering
-              in Computer Science from Chitkara University. Passionate about
+              Motivated Python Programmer with a Bachelor of Engineering
+              in Electronics from Thapar University. Passionate about
               utilizing my skills to drive success in any project or role.
               Enjoys the satisfaction of a job well done and constantly seeking
               new opportunities for growth and development. Eager to explore new
@@ -143,7 +143,7 @@
               advancements in the field of computer science. Strives for
               excellence in every endeavor and is driven by a strong work ethic.
             </p>
-            <a href="assets/resume.pdf">
+            <a href="Kartikgc9/website-repo/assets/Resumeoriginal.pdf">
               <button class="btn btn-primary rounded">DOWNLOAD CV</button>
             </a>
           </div>
@@ -162,7 +162,7 @@
             <div class="custom-card card border">
               <div class="card-body">
                 <i class="icon ti-crown"></i>
-                <h5>Graphic Design</h5>
+                <h5>Datasets</h5>
               </div>
             </div>
           </div>
@@ -178,7 +178,7 @@
             <div class="custom-card card border">
               <div class="card-body">
                 <i class="icon ti-files"></i>
-                <h5>Testing</h5>
+                <h5>EDA</h5>
               </div>
             </div>
           </div>
@@ -203,7 +203,7 @@
 
         <div class="row text-left">
           <div class="col-sm-6">
-            <h6 class="  ">Photoshop</h6>
+            <h6 class="  ">Premiere Pro</h6>
             <div class="progress">
               <div
                 class="progress-bar oColor"
@@ -321,10 +321,10 @@
             <div class="row align-items-center">
               <div class="hiretext text-center text-sm-left">
                 <h5>Hire Me For Your Project</h5>
-                <p>Accusantium labore nostrum similique quisquam.</p>
+                <p>I'm open for recruitements.</p>
               </div>
               <div class="col-sm-3 text-center text-sm-right">
-                <a href="https://www.linkedin.com/in/yuvraj-singh-5707571b5/">
+                <a href="https://www.linkedin.com/in/kartik-awadh-yadav-941300222/">
                   <button class="btn btn-light rounded">Hire Me!</button>
                 </a>
               </div>
@@ -389,21 +389,21 @@
               <i class="ti-location-pin"></i>
               <div class="">
                 <h5>Location</h5>
-                <p>Patiala, Punjab, India</p>
+                <p>Faridabad, Haryana, India</p>
               </div>
             </div>
             <div class="item">
               <i class="ti-mobile"></i>
               <div>
                 <h5>Phone Number</h5>
-                <p>+91 6239638871</p>
+                <p>+91 9873238372</p>
               </div>
             </div>
             <div class="item">
               <i class="ti-email"></i>
               <div class="mb-0">
                 <h5>Email Address</h5>
-                <p>yuvraj202001@gmail.com</p>
+                <p>kartikawadh2004yadav@gmail.com</p>
               </div>
             </div>
           </div>
