--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
     <!--  main styles -->
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <meta name="google-site-verification" content="dndd7wB3NxaDIKrOTZr9i6G2LSxekjF60YDWCKqijQo" />
   </head>
   <body>
     <!-- Page navigation -->
