--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     />
     <!--  main styles -->
     <link rel="stylesheet" href="assets/css/styles.css" />
+    
+    <!--Google meta tag-->
     <meta name="google-site-verification" content="dndd7wB3NxaDIKrOTZr9i6G2LSxekjF60YDWCKqijQo" />
+
   </head>
   <body>
     <!-- Page navigation -->
