--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
       <div class="widget">
         <div class="widget-item">
           <h2>24</h2>
-          <p>Happy Clients</p>
+          <p>Visitors</p>
         </div>
         <div class="widget-item">
-          <h2>16</h2>
+          <h2>56</h2>
           <p>Project Completed</p>
         </div>
         <div class="widget-item">
-          <h2>35</h2>
+          <h2>1</h2>
           <p>Awards Won</p>
         </div>
       </div>
@@ -127,10 +127,10 @@
           </div>
           <div class="pl-md-4 col-md-9">
             <h6 class="title">Kartik Awadh Yadav</h6>
-            <p class="subtitle">BUdding Data scientist</p>
+            <p class="subtitle">Budding Data scientist</p>
             <p>
               Motivated Python Programmer with a Bachelor of Engineering
-              in Electronics from Thapar University. Passionate about
+              in ECE from Thapar University. Passionate about
               utilizing my skills to drive success in any project or role.
               Enjoys the satisfaction of a job well done and constantly seeking
               new opportunities for growth and development. Eager to explore new
@@ -166,7 +166,7 @@
             <div class="custom-card card border">
               <div class="card-body">
                 <i class="icon ti-crown"></i>
-                <h5>Datasets</h5>
+                <h5>ML</h5>
               </div>
             </div>
           </div>
@@ -174,7 +174,7 @@
             <div class="custom-card card border">
               <div class="card-body">
                 <i class="icon ti-desktop"></i>
-                <h5>Web Development</h5>
+                <h5>DL</h5>
               </div>
             </div>
           </div>
@@ -190,7 +190,7 @@
             <div class="custom-card card border">
               <div class="card-body">
                 <i class="icon ti-bar-chart"></i>
-                <h5>SEO</h5>
+                <h5>AI</h5>
               </div>
             </div>
           </div>
@@ -207,7 +207,7 @@
 
         <div class="row text-left">
           <div class="col-sm-6">
-            <h6 class="  ">Premiere Pro</h6>
+            <h6 class="  ">Python</h6>
             <div class="progress">
               <div
                 class="progress-bar oColor"
@@ -219,7 +219,7 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <h6 class="  ">Web Development</h6>
+            <h6 class="  ">Tensorflow</h6>
             <div class="progress">
               <div
                 class="progress-bar oColor"
