--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
       <!-- Header-widget -->
       <div class="widget">
         <div class="widget-item">
-          <h2>24</h2>
+          <h2>56</h2>
           <p>Visitors</p>
         </div>
         <div class="widget-item">
-          <h2>56</h2>
+          <h2>15</h2>
           <p>Project Completed</p>
         </div>
         <div class="widget-item">
@@ -147,7 +147,7 @@
               advancements in the field of computer science. Strives for
               excellence in every endeavor and is driven by a strong work ethic.
             </p>
-            <a href="Kartikgc9/website-repo/assets/Resumeoriginal.pdf">
+            <a href="Kartikgc9/Kartikgc9.github.io/assets/Resume-Main.pdf">
               <button class="btn btn-primary rounded">DOWNLOAD CV</button>
             </a>
           </div>
