--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <button class="btn btn-primary rounded">HIRE ME</button>
             </a>
 
-            <a href="Kartikgc9/website-repo/assets/Resumeoriginal.pdf">
+            <a href="Kartikgc9/Kartikgc9.github.io/assets/Resume-Main.pdf">
               <button class="btn btn-dark rounded">DOWNLOAD CV</button>
             </a>
           </div>
@@ -98,7 +98,7 @@
       <!-- Header-widget -->
       <div class="widget">
         <div class="widget-item">
-          <h2>56</h2>
+          <h2>10</h2>
           <p>Visitors</p>
         </div>
         <div class="widget-item">
