--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <button class="btn btn-primary rounded">HIRE ME</button>
             </a>
 
-            <a href="Kartikgc9/Kartikgc9.github.io/assets/Resume-Main.pdf">
+            <a href="assets/KAY_cv.pdf">
               <button class="btn btn-dark rounded">DOWNLOAD CV</button>
             </a>
           </div>
